; ModuleID = '/home/carl/AnghaBench/git/extr_commit-graph.c_load_commit_graph_one.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit-graph.c_load_commit_graph_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit_graph = type { i32 }
%struct.stat = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.commit_graph* (i8*)* @load_commit_graph_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.commit_graph* @load_commit_graph_one(i8* %0) #0 {
  %2 = alloca %struct.commit_graph*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.stat, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.commit_graph*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @open_commit_graph(i8* %8, i32* %5, %struct.stat* %4)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  store %struct.commit_graph* null, %struct.commit_graph** %2, align 8
  br label %25

13:                                               ; preds = %1
  %14 = load i32, i32* %5, align 4
  %15 = call %struct.commit_graph* @load_commit_graph_one_fd_st(i32 %14, %struct.stat* %4)
  store %struct.commit_graph* %15, %struct.commit_graph** %6, align 8
  %16 = load %struct.commit_graph*, %struct.commit_graph** %6, align 8
  %17 = icmp ne %struct.commit_graph* %16, null
  br i1 %17, label %18, label %23

18:                                               ; preds = %13
  %19 = load i8*, i8** %3, align 8
  %20 = call i32 @xstrdup(i8* %19)
  %21 = load %struct.commit_graph*, %struct.commit_graph** %6, align 8
  %22 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  br label %23

23:                                               ; preds = %18, %13
  %24 = load %struct.commit_graph*, %struct.commit_graph** %6, align 8
  store %struct.commit_graph* %24, %struct.commit_graph** %2, align 8
  br label %25

25:                                               ; preds = %23, %12
  %26 = load %struct.commit_graph*, %struct.commit_graph** %2, align 8
  ret %struct.commit_graph* %26
}

declare dso_local i32 @open_commit_graph(i8*, i32*, %struct.stat*) #1

declare dso_local %struct.commit_graph* @load_commit_graph_one_fd_st(i32, %struct.stat*) #1

declare dso_local i32 @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
